some ui using table

--- a/home.html
+++ b/home.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css"rel="stylesheet"/>
 </head>
-<body>
-    
+<body class="bg-white">
+    <section class="bg-violet-700 w-full h-[50vh] rounded-b-3xl">
+    <div class="flex flex-row justify-center items-center h-full"> 
+        <table class="text-center text-3xl bg-gray-300 outline-8 outline-violet-300 rounded- overflow-hidden">
+        <tr >
+            <th class="border-2 p-2  w-16 h-16 ">Q</th>
+            <th class="border-2 p-2 w-16 h-16">U</th>
+        </tr>
+        <tr>
+            <th class="border-2 p-2 w-16 h-16">I</th>
+            <th class="border-2 p-2 2-16 h-16">Z</th>
+        </tr>
+      </table>
+      </div>
+    </section>
 </body>
 </html>
