build math quiz

--- a/home.html
+++ b/home.html
@@ -102,28 +102,28 @@
            
         </div>
     </section>
-    <footer class="flex flex-row justify-around text-center sticky bottom-0 bg-gray-100  mt-5">
+    <footer class="flex h-20 flex-row justify-around text-center sticky bottom-0 bg-gray-100  mt-5">
         <div>
-            <a href="home.html" class="">
-                <img src="https://cdn-icons-png.flaticon.com/128/1946/1946488.png" class="w-10"/>
+            <a href="home.html" class="foot">
+                <img src="https://cdn-icons-png.flaticon.com/128/1946/1946488.png" class="w-5 md:w-10"/>
                 <span>Home</span>
             </a>
         </div>
          <div>
-            <a href="result.html" class="">
-                <img src="https://cdn-icons-png.flaticon.com/128/1250/1250673.png" class="w-10"/>
+            <a href="result.html" class="foot">
+                <img src="https://cdn-icons-png.flaticon.com/128/1250/1250673.png" class="w-5 md:w-10"/>
                 <span>Result</span>
             </a>
         </div>
          <div>
-            <a href="help.html" class="">
-                <img src="https://cdn-icons-png.flaticon.com/128/3249/3249904.png" class="w-10"/>
+            <a href="help.html" class="foot">
+                <img src="https://cdn-icons-png.flaticon.com/128/3249/3249904.png" class="w-5 md:w-10"/>
                 <span>Help</span>
             </a>
         </div>
          <div>
-            <a href="profile.html" class="">
-                <img src="https://cdn-icons-png.flaticon.com/128/1144/1144760.png" class="w-10"/>
+            <a href="profile.html" class="foot">
+                <img src="https://cdn-icons-png.flaticon.com/128/1144/1144760.png" class="w-5 md:w-10"/>
                 <span>Profile</span>
             </a>
         </div>
