complete math ui

--- a/math.html
+++ b/math.html
@@ -50,6 +50,7 @@
             </div>
             <div class="text-3xl">Quiz Finished!</div>
             <div class="score text-2xl"></div>
+            <div class=" highScore text-2xl"></div>
             <button class="restart cursor-pointer text-2xl border-1 p-2 rounded-2xl bg-violet-600 m-5">Restart</button>
             </div>
     </section>
