--- a/home.html
+++ b/home.html
@@ -12,11 +12,11 @@
         <div class="bg-violet-500 w-45 h-45 center rounded-full">
             <div class="bg-violet-300 w-40 h-40 center rounded-full">
         <div class="bg-white w-36 h-36 center rounded-full">
-    <div class="grid grid-cols-2 w-25 gap-0.5 text-center text-2xl font-bold"> 
-       <p class=" border-2 w-12 h-12 rounded-xl center ">Q</p>
-       <p class="border-2 w-12 h-12 rounded-xl center">U</p>
-       <p class="border-2 w-12 h-12 rounded-xl center">I</p>
-       <p class="border-2 w-12 h-12 rounded-xl center">Z</p>
+    <div class="grid grid-cols-2 w-25 gap-0.5 text-center text-white text-2xl font-bold"> 
+       <p class=" border-2 w-12 h-12 rounded-xl center bg-indigo-800">Q</p>
+       <p class="border-2 w-12 h-12 rounded-xl center bg-red-800" >U</p>
+       <p class="border-2 w-12 h-12 rounded-xl center bg-green-800">I</p>
+       <p class="border-2 w-12 h-12 rounded-xl center  bg-blue-800">Z</p>
       </div>
       </div>
       </div>
