--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
                 <img src="https://cdn-icons-png.flaticon.com/128/2058/2058208.png"/>
             <span>FUN</span></div>
     </section>
-  <div class="btn"><a href="home.html">Open App</a></div>
+  <div class="btn"><a href="login.html">Open App</a></div>
 </body>
 </html>
