--- a/profile.html
+++ b/profile.html
@@ -33,8 +33,8 @@
            <div class=" m-2 center"> <input type="file" id="fileId" accept="image/*" class="border-2 w-23 p-1 rounded-2xl bg-violet-800 text-white"/></div>
         </div>
         <div class=" w-full p-5 md:text-2xl overflow-x-auto flex flex-nowrap  flex-col overflow-hidden gap-2">
-            <div contenteditable="false" class="name "></div>
-            <div contenteditable="false" class="mail "></div>
+            <div class="name "></div>
+            <div class="mail "></div>
             <div class="join"></div>
         </div>
         <div class="flex m-4 justify-center gap-2 w-full flex-wrap">
