--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-white font-serif ">
     <section class="bg-violet-800 gap-1.5 w-full h-[60vh] rounded-b-3xl center">
-        <h1 class="absolute top-5 text-2xl text-white text-center">Quiz it,Win it</h1>
+        <h1 class="absolute top-5 z-500 text-2xl text-white text-center">Quiz it,Win it</h1>
         <div class="bg-violet-500 w-45 h-45 center rounded-full">
             <div class="bg-violet-300 w-40 h-40 center rounded-full">
         <div class="bg-white w-36 h-36 center rounded-full">
